--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 11:59:00 AM</p>
+    <p class="lastupdate">09/20/2020 12:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,13 +84,13 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">81.7<br/>
-            <span class="timestamp">11:58:39 AM</span><br/>
+          <td class="data new_row">82.1<br/>
+            <span class="timestamp">12:02:13 PM</span><br/>
             51.3<br/>
             <span class="timestamp">07:14:52 AM</span>
           </td>
-          <td class="data new_row">81.7<br/>
-            <span class="timestamp">11:58:39 AM (Sunday)</span><br/>
+          <td class="data new_row">82.1<br/>
+            <span class="timestamp">12:02:13 PM (Sunday)</span><br/>
             51.3<br/>
             <span class="timestamp">07:14:52 AM (Sunday)</span>
           </td>
@@ -113,11 +113,11 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">81.7<br/>
-            <span class="timestamp">11:58:39 AM</span>
+          <td class="data new_row">82.1<br/>
+            <span class="timestamp">12:02:13 PM</span>
           </td>
-          <td class="data new_row">81.7<br/>
-            <span class="timestamp">11:58:39 AM (Sunday)</span>
+          <td class="data new_row">82.1<br/>
+            <span class="timestamp">12:02:13 PM (Sunday)</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">09/06/2020 04:04:42 PM</span>
@@ -335,11 +335,11 @@
           </td>
           <td class="data new_row">
             1<br/>
-            4
+            3
           </td>
           <td class="data new_row">
             1<br/>
-            4
+            3
           </td>
           <td class="data new_row">
             0<br/>
@@ -361,14 +361,14 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            78.5<br/>
-            <span class="timestamp">11:58:01 AM</span><br/>
+            78.7<br/>
+            <span class="timestamp">12:03:01 PM</span><br/>
             73.5<br/>
             <span class="timestamp">08:10:00 AM</span>
           </td>
           <td class="data new_row">
-            78.5<br/>
-            <span class="timestamp">11:58:01 AM (Sunday)</span><br/>
+            78.7<br/>
+            <span class="timestamp">12:03:01 PM (Sunday)</span><br/>
             73.5<br/>
             <span class="timestamp">08:10:00 AM (Sunday)</span>
           </td>
