--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 12:04:00 PM</p>
+    <p class="lastupdate">09/20/2020 12:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">82.1&#176;F</td>
+        <td class="data">82.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">82.1&#176;F</td>
+        <td class="data">82.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">82.1&#176;F</td>
+        <td class="data">82.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.7&#176;F</td>
+        <td class="data">55.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.886 inHg (-0.018)</td>
+        <td class="data">29.884 inHg (-0.019)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph WNW (292&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.7&#176;F</td>
+        <td class="data">78.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:02:13 PM">
-            82.1</span><br/>
+          <span title="12:08:23 PM">
+            82.7</span><br/>
           <span title="07:14:52 AM">
             51.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:02:13 PM (Sunday)">
-            82.1</span><br/>
+          <span title="12:08:23 PM (Sunday)">
+            82.7</span><br/>
           <span title="07:14:52 AM (Sunday)">
             51.3</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:02:13 PM" class="hival">
-            82.1</span>
+          <span title="12:08:23 PM" class="hival">
+            82.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:02:13 PM (Sunday)" class="hival">
-            82.1</span>
+          <span title="12:08:23 PM (Sunday)" class="hival">
+            82.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:35:37 AM">
-            55.7</span><br/>
+          <span title="12:08:23 PM">
+            55.9</span><br/>
           <span title="07:14:52 AM">
             46.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:35:37 AM (Sunday)">
-            55.7</span><br/>
+          <span title="12:08:23 PM (Sunday)">
+            55.9</span><br/>
           <span title="07:14:52 AM (Sunday)">
             46.9</span>
         </td>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:03:01 PM">
-            78.7</span><br/>
+          <span title="12:07:01 PM">
+            78.8</span><br/>
           <span title="08:10:00 AM">
             73.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:03:01 PM (Sunday)">
-            78.7</span><br/>
+          <span title="12:07:01 PM (Sunday)">
+            78.8</span><br/>
           <span title="08:10:00 AM (Sunday)">
             73.5</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">77%</td>
+      <td class="data">60%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 4 hours, 17 minutes</td>
+      <td class="data">0 days, 4 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 4 hours, 17 minutes</td>
+      <td class="data">0 days, 4 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
