--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 12:34:00 PM</p>
+    <p class="lastupdate">09/20/2020 12:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">83.6&#176;F</td>
+        <td class="data">84.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">83.6&#176;F</td>
+        <td class="data">84.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">83.6&#176;F</td>
+        <td class="data">84.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.5&#176;F</td>
+        <td class="data">54.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">37%</td>
+        <td class="data">36%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.875 inHg (-0.034)</td>
+        <td class="data">29.873 inHg (-0.036)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">3 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.6&#176;F</td>
+        <td class="data">79.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:18:27 PM">
-            84.1</span><br/>
+          <span title="12:38:47 PM">
+            84.6</span><br/>
           <span title="07:14:52 AM">
             51.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:18:27 PM (Sunday)">
-            84.1</span><br/>
+          <span title="12:38:47 PM (Sunday)">
+            84.6</span><br/>
           <span title="07:14:52 AM (Sunday)">
             51.3</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:18:27 PM" class="hival">
-            84.1</span>
+          <span title="12:38:47 PM" class="hival">
+            84.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:18:27 PM (Sunday)" class="hival">
-            84.1</span>
+          <span title="12:38:47 PM (Sunday)" class="hival">
+            84.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:31:01 PM">
-            79.6</span><br/>
+          <span title="12:36:01 PM">
+            79.8</span><br/>
           <span title="08:10:00 AM">
             73.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:31:01 PM (Sunday)">
-            79.6</span><br/>
+          <span title="12:36:01 PM (Sunday)">
+            79.8</span><br/>
           <span title="08:10:00 AM (Sunday)">
             73.5</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">56%</td>
+      <td class="data">64%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 4 hours, 47 minutes</td>
+      <td class="data">0 days, 4 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 4 hours, 47 minutes</td>
+      <td class="data">0 days, 4 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
